--- a/examples/index.html
+++ b/examples/index.html
@@ -30,66 +30,176 @@
 
   <h1>Remodal</h1>
   <p>
-    Flat, responsive, lightweight, fast, easy customizable modal window plugin
-    with declarative state notation and hash tracking.
-  </p>
-  <p>
-    Minified version size: ~4kb
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Flat, responsive, lightweight, fast, easy customizable modal window plugin
-    with declarative state notation and hash tracking.
-  </p>
-  <p>
-    Minified version size: ~4kb
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
   </p>
   <br>
+
   <h1>Remodal</h1>
   <p>
-    Flat, responsive, lightweight, fast, easy customizable modal window plugin
-    with declarative state notation and hash tracking.
-  </p>
-  <p>
-    Minified version size: ~4kb
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
   </p>
   <br>
+
   <h1>Remodal</h1>
   <p>
-    Flat, responsive, lightweight, fast, easy customizable modal window plugin
-    with declarative state notation and hash tracking.
-  </p>
-  <p>
-    Minified version size: ~4kb
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
   </p>
   <br>
+
   <h1>Remodal</h1>
   <p>
-    Flat, responsive, lightweight, fast, easy customizable modal window plugin
-    with declarative state notation and hash tracking.
-  </p>
-  <p>
-    Minified version size: ~4kb
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
   </p>
   <br>
+
   <h1>Remodal</h1>
   <p>
-    Flat, responsive, lightweight, fast, easy customizable modal window plugin
-    with declarative state notation and hash tracking.
-  </p>
-  <p>
-    Minified version size: ~4kb
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
   </p>
   <br>
+
   <h1>Remodal</h1>
   <p>
-    Flat, responsive, lightweight, fast, easy customizable modal window plugin
-    with declarative state notation and hash tracking.
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
   </p>
+  <br>
+
+  <h1>Remodal</h1>
   <p>
-    Minified version size: ~4kb
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
+  </p>
+  <br>
+
+  <h1>Remodal</h1>
+  <p>
+    Responsive, lightweight, fast, fully customizable modal window plugin
+    with declarative configuration and hash tracking.
   </p>
   <br>
 </div>
@@ -97,13 +207,10 @@
 <div class="remodal" data-remodal-id="modal">
   <button data-remodal-action="close" class="remodal-close"></button>
   <div>
-    <h1>Remodal</h1>
+    <h2>Remodal</h2>
     <p>
-      Flat, responsive, lightweight, fast, easy customizable modal window plugin
+      Responsive, lightweight, fast, fully customizable modal window plugin
       with declarative state notation and hash tracking.
-    </p>
-    <p>
-      Minified version size: ~4kb
     </p>
   </div>
   <br>
@@ -113,7 +220,7 @@
 
 <div data-remodal-id="modal2">
   <div>
-    <h1>Another one window</h1>
+    <h2>Another one window</h2>
     <p>
       Hello!
     </p>
@@ -131,12 +238,13 @@
   //     closeOnConfirm: true,
   //     closeOnCancel: true,
   //     closeOnEscape: true,
-  //     closeOnAnyClick: true
+  //     closeOnAnyClick: true,
+  //     modifier: ''
   //   }
   // };
 </script>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="../libs/jquery/dist/jquery.min.js"><\/script>')</script>
 <script src="../dist/jquery.remodal.js"></script>
 
@@ -166,18 +274,22 @@
     console.log('cancellation');
   });
 
-//  You can open or close it like this:
-//  $(function () {
-//    var inst = $.remodal.lookup[$('[data-remodal-id=modal]').data('remodal')];
+//  Usage:
+//  $(function() {
+//
+//    // In this case the initialization function returns the already created instance
+//    var inst = $('[data-remodal-id=modal]').remodal();
+//
 //    inst.open();
 //    inst.close();
+//    inst.getState();
+//    inst.destroy();
 //  });
 
-  //  Or init in this way:
-  var inst = $('[data-remodal-id=modal2]').remodal({
+  //  The second way to initialize:
+  $('[data-remodal-id=modal2]').remodal({
     modifier: 'with-red-theme'
   });
-  //  inst.open();
 </script>
 </body>
 </html>
