Separete base and theme styles (Solves #124)

--- a/examples/index-zepto.html
+++ b/examples/index-zepto.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Remodal example">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../dist/jquery.remodal.css">
+  <link rel="stylesheet" href="../dist/jquery.remodal-default-theme.css">
   <style>
     .remodal-bg.with-red-theme.remodal-is-opening,
     .remodal-bg.with-red-theme.remodal-is-opened {
