--- a/test/remodal.html
+++ b/test/remodal.html
@@ -13,6 +13,7 @@
 
     <!-- Load local lib and tests -->
     <link rel="stylesheet" href="../src/jquery.remodal.css">
+    <link rel="stylesheet" href="../src/jquery.remodal-default-theme.css">
     <script src="../src/jquery.remodal.js"></script>
     <script src="remodal_test.js"></script>
     <style>
