Remove 'jquery' prefix in the files (Solves #126)

--- a/examples/index-zepto.html
+++ b/examples/index-zepto.html
@@ -6,8 +6,8 @@
   <title>Remodal example</title>
   <meta name="description" content="Remodal example">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../dist/jquery.remodal.css">
-  <link rel="stylesheet" href="../dist/jquery.remodal-default-theme.css">
+  <link rel="stylesheet" href="../dist/remodal.css">
+  <link rel="stylesheet" href="../dist/remodal-default-theme.css">
   <style>
     .remodal-bg.with-red-theme.remodal-is-opening,
     .remodal-bg.with-red-theme.remodal-is-opened {
@@ -247,7 +247,7 @@
 
 <script src="http://cdnjs.cloudflare.com/ajax/libs/zepto/1.1.4/zepto.js"></script>
 <script>window.Zepto || document.write('<script src="../libs/zepto/zepto.min.js"><\/script>')</script>
-<script src="../dist/jquery.remodal.js"></script>
+<script src="../dist/remodal.js"></script>
 
 <!-- Events -->
 <script>
