--- a/test/remodal.html
+++ b/test/remodal.html
@@ -12,9 +12,9 @@
     <script src="../libs/qunit/qunit/qunit.js"></script>
 
     <!-- Load local lib and tests -->
-    <link rel="stylesheet" href="../src/jquery.remodal.css">
-    <link rel="stylesheet" href="../src/jquery.remodal-default-theme.css">
-    <script src="../src/jquery.remodal.js"></script>
+    <link rel="stylesheet" href="../src/remodal.css">
+    <link rel="stylesheet" href="../src/remodal-default-theme.css">
+    <script src="../src/remodal.js"></script>
     <script src="remodal_test.js"></script>
     <style>
       .remodal-overlay.without-animation.remodal-is-opening,
