Rename 'closeOnAnyClick' property

--- a/examples/index-zepto.html
+++ b/examples/index-zepto.html
@@ -239,7 +239,7 @@
   //     closeOnConfirm: true,
   //     closeOnCancel: true,
   //     closeOnEscape: true,
-  //     closeOnAnyClick: true,
+  //     closeOnOutsideClick: true,
   //     modifier: ''
   //   }
   // };
