--- a/test/remodal.html
+++ b/test/remodal.html
@@ -43,7 +43,7 @@
 
 <div class="remodal" data-remodal-id="modal2"
   data-remodal-options="hashTracking: false,
-    closeOnConfirm:false,closeOnCancel:  false, closeOnEscape: false , closeOnAnyClick: false,
+    closeOnConfirm:false,closeOnCancel:  false, closeOnEscape: false , closeOnOutsideClick: false,
     modifier : without-animation with-test-class">
 
   <a data-remodal-action="close" class="remodal-close"></a>
