Change the description

--- a/examples/index-zepto.html
+++ b/examples/index-zepto.html
@@ -31,175 +31,175 @@
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
 
   <h1>Remodal</h1>
   <p>
-    Responsive, lightweight, fast, fully customizable modal window plugin
+    Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
     with declarative configuration and hash tracking.
   </p>
   <br>
@@ -210,7 +210,7 @@
   <div>
     <h2 id="modal1Title">Remodal</h2>
     <p id="modal1Desc">
-      Responsive, lightweight, fast, fully customizable modal window plugin
+      Responsive, lightweight, fast, synchronized with CSS animations, fully customizable modal window plugin
       with declarative state notation and hash tracking.
     </p>
   </div>
