Check for existing wrapper before creating it. Add test to make sure existing wrapper gets used when appropriate.

--- a/test/remodal.html
+++ b/test/remodal.html
@@ -54,5 +54,11 @@
 <div data-remodal-id="modal3">
   <a data-remodal-action="close" class="remodal-close"></a>
 </div>
+
+<div class="remodal-wrapper">
+  <div class="remodal" data-remodal-id="modal5">
+  </div>
+</div>
+
 </body>
 </html>
