Update tests after #186

--- a/test/remodal.html
+++ b/test/remodal.html
@@ -54,5 +54,9 @@
 <div data-remodal-id="modal3">
   <a data-remodal-action="close" class="remodal-close"></a>
 </div>
+
+<div class="remodal" data-remodal-id="!modal4/test">
+  <a data-remodal-action="close" class="remodal-close"></a>
+</div>
 </body>
 </html>
