add appendTo option to attach remodal wrapper to a different DOM element than document.body

--- a/test/remodal.html
+++ b/test/remodal.html
@@ -58,5 +58,11 @@
 <div class="remodal" data-remodal-id="!modal4/test">
   <a data-remodal-action="close" class="remodal-close"></a>
 </div>
+
+<div data-remodal-id="modal5">
+  <a data-remodal-action="close" class="remodal-close"></a>
+</div>
+
+<div id="target"></div>
 </body>
 </html>
